[gd_scene load_steps=5 format=3 uid="uid://dvgq4axeflbdm"]

[ext_resource type="Texture2D" uid="uid://diy4cmiyt1bs" path="res://assets/space.png" id="1_gm0nk"]
[ext_resource type="Script" path="res://Scenes/space_background.gd" id="1_pidn4"]
[ext_resource type="Texture2D" uid="uid://bb4xejy7fhbuj" path="res://assets/far_stars.png" id="2_ojtdp"]
[ext_resource type="Texture2D" uid="uid://b1w7hloudx0y7" path="res://assets/close_stars.png" id="3_redeb"]

[node name="SpaceBackground" type="ParallaxBackground"]
script = ExtResource("1_pidn4")

[node name="SpaceLayer" type="ParallaxLayer" parent="."]
unique_name_in_owner = true
motion_mirroring = Vector2(0, 240)

[node name="Space" type="TextureRect" parent="SpaceLayer"]
offset_right = 160.0
offset_bottom = 241.0
texture = ExtResource("1_gm0nk")
stretch_mode = 1

[node name="FarStarsLayer" type="ParallaxLayer" parent="."]
unique_name_in_owner = true
motion_mirroring = Vector2(0, 240)

[node name="FarStars" type="TextureRect" parent="FarStarsLayer"]
offset_right = 157.0
offset_bottom = 240.0
texture = ExtResource("2_ojtdp")
stretch_mode = 1

[node name="CloseStarLayer" type="ParallaxLayer" parent="."]
unique_name_in_owner = true
motion_mirroring = Vector2(0, 240)

[node name="CloseStars" type="TextureRect" parent="CloseStarLayer"]
offset_right = 157.0
offset_bottom = 240.0
texture = ExtResource("3_redeb")
stretch_mode = 1
